- created dynamic search result component

--- a/src/i18n/translations.json
+++ b/src/i18n/translations.json
@@ -12,5 +12,10 @@
   },
   "departmentSuccess": {
     "chartTitle": ["Average credit gains after 13 months for BSc students starting"]
+  },
+  "studentStatistics": {
+    "studentNumber": ["Student number"],
+    "started": ["Started"],
+    "credits": ["Credits"]
   }
 }
