- Modularised StudentStatistics component more

--- a/src/i18n/translations.json
+++ b/src/i18n/translations.json
@@ -1,7 +1,8 @@
 {
   "common": {
     "example" : ["react-localize-redux example text"],
-    "isLoading": ["Loading"]
+    "loading": ["Loading"],
+    "noResults": ["No search results"]
   },
   "navigationBar" : {
     "departmentSuccess" : ["Department success"],
