--- a/src/i18n/translations.json
+++ b/src/i18n/translations.json
@@ -15,7 +15,7 @@
   "navigationBar" : {
     "departmentSuccess" : ["Department success"],
     "populations" : ["Populations"],
-    "students" : ["Students"],
+    "students" : ["Student statistics"],
     "courses" : ["Courses"],
     "teachers" : ["Teachers"]
   },
@@ -23,7 +23,9 @@
     "chartTitle": ["Average credit gains after 13 months for BSc students starting"]
   },
   "studentStatistics": {
-
+    "header" : ["Student statistics"],
+    "searchPlaceholder": ["Search with a student number or name"],
+    "chartTitle" : ["Credit Accumulation"]
   },
   "tags": {
     "addTag": ["Add tag"],
