- added global layout for segments - cleaned styles

--- a/src/i18n/translations.json
+++ b/src/i18n/translations.json
@@ -29,6 +29,7 @@
     "creditStatisticsHeader" : ["Credit statistics"]
   },
   "departmentSuccess": {
+    "header": ["Department Success"],
     "chartTitle": ["Average credit gains after 13 months for BSc students starting"]
   },
   "studentStatistics": {
