- removed constructor binds and moved on to object initalizing

--- a/src/i18n/translations.json
+++ b/src/i18n/translations.json
@@ -26,7 +26,8 @@
   "populationStatistics" : {
     "header": ["Population statistics"],
     "graphSegmentHeader" : ["Credit accumulation"],
-    "creditStatisticsHeader" : ["Credit statistics"]
+    "creditStatisticsHeader" : ["Credit statistics"],
+    "sampleId": ["Sample id"]
   },
   "departmentSuccess": {
     "header": ["Department Success"],
