--- a/src/i18n/translations.json
+++ b/src/i18n/translations.json
@@ -27,7 +27,15 @@
     "header": ["Population statistics"],
     "graphSegmentHeader" : ["Credit accumulation"],
     "creditStatisticsHeader" : ["Credit statistics"],
-    "sampleId": ["Sample id"]
+    "sampleId": ["Id"],
+    "sampleSize" : ["Sample size: ${ amount } students"],
+    "allPopulations" : ["All populations"],
+    "alreadyFetched": ["Population already in analysis"],
+    "addPopulation": ["Add population"],
+    "clearPopulations": ["Clear populations"],
+    "searchTitle": ["Search for populations"],
+    "studyRights": ["Study rights"],
+    "ennrollmentDates": ["Ennrollment dates"]
   },
   "departmentSuccess": {
     "header": ["Department Success"],
