- cleaned things - fixed texts

--- a/src/i18n/translations.json
+++ b/src/i18n/translations.json
@@ -35,7 +35,7 @@
     "clearPopulations": ["Clear populations"],
     "searchTitle": ["Search for populations"],
     "studyRights": ["Study rights"],
-    "ennrollmentDates": ["Ennrollment dates"]
+    "enrollmentDates": ["Enrollment dates"]
   },
   "departmentSuccess": {
     "header": ["Department Success"],
