--- a/src/i18n/translations.json
+++ b/src/i18n/translations.json
@@ -31,6 +31,7 @@
     "sampleSize" : ["Sample size: ${ amount } students"],
     "allPopulations" : ["All populations"],
     "alreadyFetched": ["Population already in analysis"],
+    "selectDate": ["Select at least one enrollment date"],
     "addPopulation": ["Add population"],
     "clearPopulations": ["Clear populations"],
     "searchTitle": ["Search for populations"],
