- added error handling to ui - fixed problems with fetch api TypeErrors - fixed student and population statistics error handling

--- a/src/i18n/translations.json
+++ b/src/i18n/translations.json
@@ -13,6 +13,10 @@
     "grade": ["Grade"],
     "passed": ["Passed"]
   },
+  "error": {
+    "connectionError" : ["Connection error"],
+    "errorInResponseTo" : ["Error for API call"]
+  },
   "graphs": {
     "referenceCredits": ["Reference credits"]
   },
