- added token handling with following flows: prod: checks if token exists in localStorage before querying api, if not => logs in and adds it to localStorage  if yes => adds token to headers. Logout removes token - Added logout to Navbar - 403 error removes also removes token from localStroage, to get rid of old tokens etc.
- Dev:
Same flow as in prod, except logs in as tktl as default
Also added UGLY dev controls, where user can select from list of users who he/she wants to be

--- a/src/i18n/translations.json
+++ b/src/i18n/translations.json
@@ -25,7 +25,8 @@
     "populations" : ["Population statistics"],
     "students" : ["Student statistics"],
     "courses" : ["Courses"],
-    "teachers" : ["Teachers"]
+    "teachers" : ["Teachers"],
+    "logout": ["Logout"]
   },
   "populationStatistics" : {
     "header": ["Population statistics"],
