refactor routes and navbar

--- a/src/i18n/translations.json
+++ b/src/i18n/translations.json
@@ -26,6 +26,7 @@
     "students" : ["Student statistics"],
     "courses" : ["Courses"],
     "teachers" : ["Teachers"],
+    "users" : ["Users"],
     "logout": ["Logout"]
   },
   "populationStatistics" : {
