--- a/src/i18n/translations.json
+++ b/src/i18n/translations.json
@@ -24,7 +24,7 @@
     "departmentSuccess" : ["Department success"],
     "populations" : ["Population statistics"],
     "students" : ["Student statistics"],
-    "courses" : ["Courses"],
+    "courseinstances" : ["Course Instances"],
     "teachers" : ["Teachers"],
     "courseStatistics" : ["Course statistics"],
     "users" : ["Users"],
