limit population stufy graph by course

--- a/src/i18n/translations.json
+++ b/src/i18n/translations.json
@@ -59,8 +59,9 @@
     "alreadyFetched": ["Selected population already in analysis"],
     "selectValidYear": ["Select valid year."],
     "addPopulation": ["Add population"],
-    "clearPopulations": ["Clear populations"],
-    "searchTitle": ["Search for populations"],
+    "clearPopulations": ["Remove population"],
+    "searchTitle": ["Search for population"],
+    "foundTitle": ["Population"],
     "studyRights": ["Study rights"],
     "enrollmentYear": ["Enrollment year"],
     "semester" : ["Semester"],
