Course duplicate code managing UI started

--- a/src/i18n/translations.json
+++ b/src/i18n/translations.json
@@ -28,6 +28,7 @@
     "teachers" : ["Teachers"],
     "courseStatistics" : ["Course statistics"],
     "users" : ["Users"],
+    "settings": ["Settings"],
     "logout": ["Logout"]
   },
   "populationCourses": {
