Added translation string for empty query result in PopulationStatistics page.

--- a/src/i18n/translations.json
+++ b/src/i18n/translations.json
@@ -189,6 +189,9 @@
     ],
     "noSelectableStudyRights": [
       "No selectable study rights"
+    ],
+    "emptyQueryResult": [
+      "No statistics found for the given query. "
     ]
   },
   "departmentSuccess": {
