student search now doesn't search with less than 3 letters in query

--- a/src/i18n/translations.json
+++ b/src/i18n/translations.json
@@ -207,7 +207,7 @@
       "Student statistics"
     ],
     "searchPlaceholder": [
-      "Search with a student number or name (surename firstname)"
+      "Search with a student number or name (surname firstname)"
     ],
     "chartTitle": [
       "Credit Accumulation"
@@ -218,7 +218,7 @@
       "Student statistics"
     ],
     "searchPlaceholder": [
-      "Search with a student number or name (surename firstname)"
+      "Search with a student number or name (surname firstname)"
     ],
     "chartTitle": [
       "Credit Accumulation"
