reworked student statistics studyrights table

--- a/src/i18n/translations.json
+++ b/src/i18n/translations.json
@@ -221,6 +221,14 @@
       "Credit Accumulation"
     ]
   },
+  "studyrightStatistis": {
+    "header": [
+      "Studyright statistics"
+    ],
+    "navigationBar": [
+      "Studyright statistics"
+    ]
+  },
   "courseStatistics": {
     "header": [
       "Student statistics"
