initial commit for course groups feature

--- a/src/i18n/translations.json
+++ b/src/i18n/translations.json
@@ -89,6 +89,9 @@
     ],
     "oodilearn": [
       "OodiLearn"
+    ],
+    "courseGroups": [
+      "Course groups"
     ]
   },
   "populationCourses": {
